objects/copado__User_Story__c.object
<CustomObject>
    <description>Agile form of requirements gathering</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BranchName__c</fullName>
        <formula>&apos;feature/&apos; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BranchName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Approval__c</fullName>
        <label>Business Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Yet to Approve</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Disruption_logged__c</fullName>
        <formula>IF(OR(TEXT(Criticality__c) == &apos;P0 - Blocker - Business Disruption&apos;, TEXT(Criticality__c) == &apos;P1 - Critical - No Workaround&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Disruption logged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <label>Criticality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P0 - Blocker - Business Disruption</fullName>
                </value>
                <value>
                    <fullName>P1 - Critical - No Workaround</fullName>
                </value>
                <value>
                    <fullName>P2 - Major</fullName>
                </value>
                <value>
                    <fullName>P3 - Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment_Name__c</fullName>
        <formula>copado__Environment__r.Name</formula>
        <label>Environment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Priority_Violation__c</fullName>
        <description>This field indicates the highest priority violation from the PMD report.</description>
        <label>Highest Priority Violation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Included_in_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Included in Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>User Stories (Included in Promotion)</relationshipLabel>
        <relationshipName>User_Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Promoted_Prod_or_Rolled_back__c</fullName>
        <label>Initial Promoted Prod or Rolled back</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Ready_To_Promote__c</fullName>
        <label>Initial Ready To Promote</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jira_Key__c</fullName>
        <label>Jira Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification_for_Coverage__c</fullName>
        <label>Justification for Coverage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification_for_PMD_Violations__c</fullName>
        <label>Justification for PMD Violations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_PMD_Scan_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if a latest PMD scan is required or not.</description>
        <inlineHelpText>This field indicates if a latest PMD scan is required or not.</inlineHelpText>
        <label>PMD Scan Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Bug_Fixes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of Bug Fixes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_times_the_story_is_deployed_toPROD__c</fullName>
        <label>No of times the story is deployed toPROD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_times_the_story_is_deployed_to_QA__c</fullName>
        <label>No of times the story is deployed to QA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_times_the_story_is_deployed_to_UAT__c</fullName>
        <label>No of times the story is deployed to UAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMD_Exception_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is to provide PMD exception for the User Story.</inlineHelpText>
        <label>PMD Exception Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>copado__Project__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pull_Req_Count__c</fullName>
        <label>Pull Req Count</label>
        <summaryFilterItems>
            <field>copado__Pull_Request__c.copado__State__c</field>
            <operation>notEqual</operation>
            <value>Completed, Merged, Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>copado__Pull_Request__c.copado__User_Story__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <formula>copado__Release__r.Name</formula>
        <label>Release Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCA_Number__c</fullName>
        <label>SCA Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Checkobox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Checkobox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Item</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cmcSf__Apex_Test_Level__c</fullName>
        <description>Test levels in order from least to most restrictive</description>
        <label>Apex Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>cmcSf__Apex_Test_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cml_First_Ready_to_Promote_Time__c</fullName>
        <description>Records the date/time on which this User Story was first marked as Ready to Promote</description>
        <label>First Ready to Promote Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cml_First_Time_Promoted_Prod_or_RB__c</fullName>
        <description>Records the first time this User Story was promoted to a Production Org OR Rolled Back out of Production. Used in the calculation of both Lead Time and Mean Time to Restore</description>
        <label>First Time Promoted Prod Or Rolled Back</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cml_Found_in_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Found in Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>User Stories (Found in Promotion)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cml_Is_Business_Disruption_Failure__c</fullName>
        <description>Indicates if this User Story is considered a Business Disrupting Failure (i.e. a P0 or P1 severity issue)</description>
        <formula>IF(OR(TEXT(cml_Severity__c) == &apos;P0 - Blocker - Business Disruption&apos;, TEXT(cml_Severity__c) == &apos;P1 - Critical - No Workaround&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Disruption Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cml_Severity__c</fullName>
        <description>Used to track the severity on User Stories of type Bug</description>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P0 - Blocker - Business Disruption</fullName>
                </value>
                <value>
                    <fullName>P1 - Critical - No Workaround</fullName>
                </value>
                <value>
                    <fullName>P2 - Major</fullName>
                </value>
                <value>
                    <fullName>P3 - Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Acceptance_Criteria_Status__c</fullName>
        <label>Acceptance Criteria Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Actual_Points_Other__c</fullName>
        <inlineHelpText>Use this field to split your User Story&apos;s actual effort on implementation, reviews, testing, and documentation among different scopes. Example: Dev and QA, Frontend and Backend. You can label this field to match your scope.</inlineHelpText>
        <label>Actual Points Other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Apex_Code_Coverage__c</fullName>
        <description>Coverage of the Apex Classes added or committed within the User Story.</description>
        <inlineHelpText>Coverage of the Apex Classes added or committed within the User Story.</inlineHelpText>
        <label>Apex Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Apex_Tests_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex Tests Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Backburner_Rank__c</fullName>
        <label>Backburner Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Backlog_Rank__c</fullName>
        <description>Position of the User Story within the Backlog. Usually User Stories at the top of the Backlog are more relevant than User Stories at the bottom.</description>
        <inlineHelpText>Position of the User Story within the Backlog. Usually User Stories at the top of the Backlog are more relevant than User Stories at the bottom.</inlineHelpText>
        <label>Backlog Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Base_Branch__c</fullName>
        <description>Git branch which the feature branch is created from. This value is updated when committing in the user story and by default, it will be the main branch of the Pipeline or the base branch of the Release linked to the user story.</description>
        <inlineHelpText>Git branch which the feature branch is created from. This value is updated when committing in the user story and by default, it will be the main branch of the Deployment Flow or the base branch of the Release linked to the user story.e user story.</inlineHelpText>
        <label>Base Branch</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Business_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories_BA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Cancellation_Reason__c</fullName>
        <description>Describes why the User Story was cancelled, so that this information is available.</description>
        <inlineHelpText>Describes why the User Story was cancelled, so that this information is available.</inlineHelpText>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Classes_Without_Coverage__c</fullName>
        <description>Number of classes without the minimum required coverage.</description>
        <inlineHelpText>Number of classes without the minimum required coverage.</inlineHelpText>
        <label>Classes Without Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Criteria__c</fullName>
        <label>Compliance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Status__c</fullName>
        <description>Current status of the User Story Compliance scan.</description>
        <inlineHelpText>Current status of the User Story Compliance scan.</inlineHelpText>
        <label>Compliance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed - Findings detected</fullName>
                </value>
                <value>
                    <fullName>Completed - No Findings</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed - Resolved</fullName>
                </value>
                <value>
                    <fullName>Under Investigation</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Data_Privacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Privacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories (Developer)</relationshipLabel>
        <relationshipName>User_Stories_developer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Documentation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Environment_Type__c</fullName>
        <formula>TEXT(copado__Environment__r.copado__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Environment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current environment of the User Story. This value is added automatically by Copado based on the selected Credential.</description>
        <inlineHelpText>Current environment of the User Story. This value is added automatically by Copado based on the selected Org Credential.</inlineHelpText>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Epic containing the User Story.</description>
        <inlineHelpText>Epic containing the User Story.</inlineHelpText>
        <label>Epic</label>
        <referenceTo>copado__Epic__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Exclude_From_CBM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this user story will not be included in the count of user stories ahead and behind.</description>
        <inlineHelpText>If checked, this user story will not be included in the count of user stories ahead and behind.</inlineHelpText>
        <label>Exclude from Pipelines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Failing_Methods__c</fullName>
        <description>Number of Apex Class methods that failed during the Apex Test Run execution.</description>
        <inlineHelpText>Number of Apex Class methods that failed during the Apex Test Run execution.</inlineHelpText>
        <label>Failing Methods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Copado_Feature__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Functional_Specifications__c</fullName>
        <label>Functional Specifications</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Git_Merge_Status__c</fullName>
        <description>The git merge status of the latest pull request between the feature branch and the target branch. This value is provided by the Git Repository. If there is no value, the Git Repository did not provide one.</description>
        <inlineHelpText>The git merge status of the latest pull request between the feature branch and the target branch. This value is provided by the Git Repository. If there is no value, the Git Repository did not provide one.</inlineHelpText>
        <label>Git Merge Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mergeable</fullName>
                </value>
                <value>
                    <fullName>Conflicts Detected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <formula>copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c</formula>
        <label>Git Repository</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Has_Apex_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value automatically updated by Copado whenever there are Apex Classes added or committed in the User Story.</description>
        <inlineHelpText>Value automatically updated by Copado whenever there are Apex Classes added or committed in the User Story.</inlineHelpText>
        <label>Has Apex Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Is_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Last_Compliance_Scan_Date__c</fullName>
        <description>Latest Compliance Scan execution date.</description>
        <inlineHelpText>Latest Compliance Scan execution date.</inlineHelpText>
        <label>Last Compliance Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Promotion_Date__c</fullName>
        <label>Last Promotion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Validation_Deployment_Status__c</fullName>
        <description>Status of the latest validation Promotion for the User Story.</description>
        <formula>IF(copado__Last_Validation_Deployment__r.copado__Date__c &lt; copado__Latest_Commit_Date__c,
IMAGE(&apos;/img/msg_icons/warning16.png&apos;,&apos;OutDated&apos;)+&quot; &quot;+&quot;Validation Outdated&quot;, 
   IF(AND(NOT(ISBLANK(copado__Last_Validation_Promotion__c)),
                               (CONTAINS(TEXT(copado__Last_Validation_Promotion__r.copado__Status__c),&apos;error&apos;)) || ISPICKVAL(copado__Last_Validation_Promotion__r.copado__Status__c, &apos;Validation failed&apos;)),
               IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;failed&quot;)+&quot; &quot;+TEXT(copado__Last_Validation_Promotion__r.copado__Status__c),
               IF(AND(NOT(ISBLANK(copado__Last_Validation_Promotion__c)),
                               (CONTAINS(TEXT(copado__Last_Validation_Promotion__r.copado__Status__c),&apos;Successfully&apos;)) || ISPICKVAL(copado__Last_Validation_Promotion__r.copado__Status__c, &apos;Validated&apos;)),
                           IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;completed&quot;)+&quot; &quot;+TEXT(copado__Last_Validation_Promotion__r.copado__Status__c),
                           TEXT(copado__Last_Validation_Promotion__r.copado__Status__c)
                       )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of the latest validation Promotion for the User Story.</inlineHelpText>
        <label>Last Validation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Last_Validation_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Most recent validation Deployment for the User Story.</description>
        <inlineHelpText>Most recent validation Deployment for the User Story.</inlineHelpText>
        <label>Last Validation Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Last_Validation_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Promotion containing the most recent validation Deployment.</description>
        <inlineHelpText>Promotion containing the most recent validation Deployment.</inlineHelpText>
        <label>Last Validation Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Latest_Commit_Date__c</fullName>
        <label>Latest Commit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Manual_Step_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If any of the Quality Gates are Manual Steps (Pull Request, Manual Test, or Manual Approval), the story should be marked as &apos;Manual Step Required&apos;.</description>
        <label>Manual Step Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Manual_Tests_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Tests Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Metadata_Types_in_Selection__c</fullName>
        <description>Metadata types of the components listed in the User Story Selections. This value is updated automatically by Copado.</description>
        <inlineHelpText>Metadata types of the components listed in the User Story Selections. This value is updated automatically by Copado.</inlineHelpText>
        <label>Metadata Types in Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ActionLinkGroupTemplate</fullName>
                </value>
                <value>
                    <fullName>AnalyticSnapshot</fullName>
                </value>
                <value>
                    <fullName>ApexClass</fullName>
                </value>
                <value>
                    <fullName>ApexComponent</fullName>
                </value>
                <value>
                    <fullName>ApexPage</fullName>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                </value>
                <value>
                    <fullName>AppMenu</fullName>
                </value>
                <value>
                    <fullName>ApprovalProcess</fullName>
                </value>
                <value>
                    <fullName>AssignmentRule</fullName>
                </value>
                <value>
                    <fullName>AssignmentRules</fullName>
                </value>
                <value>
                    <fullName>AuraDefinitionBundle</fullName>
                </value>
                <value>
                    <fullName>AuthProvider</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRule</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRules</fullName>
                </value>
                <value>
                    <fullName>BusinessProcess</fullName>
                </value>
                <value>
                    <fullName>CallCenter</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>ChannelLayout</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>CompactLayout</fullName>
                </value>
                <value>
                    <fullName>ConnectedApp</fullName>
                </value>
                <value>
                    <fullName>CorsWhitelistOrigin</fullName>
                </value>
                <value>
                    <fullName>CustomApplication</fullName>
                </value>
                <value>
                    <fullName>CustomField</fullName>
                </value>
                <value>
                    <fullName>CustomLabel</fullName>
                </value>
                <value>
                    <fullName>CustomLabels</fullName>
                </value>
                <value>
                    <fullName>CustomMetadata</fullName>
                </value>
                <value>
                    <fullName>CustomObject</fullName>
                </value>
                <value>
                    <fullName>CustomObjectTranslation</fullName>
                </value>
                <value>
                    <fullName>CustomPageWebLink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Minimum_Apex_Code_Coverage__c</fullName>
        <defaultValue>0.75</defaultValue>
        <description>Minimum Apex Code Coverage required. If this value is lower than the value set in the User Story&apos;s Environment, the Environment&apos;s value will be automatically applied.</description>
        <inlineHelpText>Minimum Apex Code Coverage required. If this value is lower than the value set in the User Story&apos;s Environment, the Environment&apos;s value will be automatically applied.</inlineHelpText>
        <label>Minimum Apex Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Order__c</fullName>
        <label>Order</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credential used to add or commit metadata and to promote and deploy the User Story to the next Environment.</description>
        <inlineHelpText>Credential used to add or commit metadata and to promote and deploy the User Story to the next Environment.</inlineHelpText>
        <label>Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>User Stories (Credential)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Parent_Epic_Title__c</fullName>
        <formula>copado__Epic__r.copado__Epic_Title__c</formula>
        <label>Parent Epic Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Planned_Points_Other__c</fullName>
        <inlineHelpText>Use this field to split your User Story effort estimation among different scopes. Example: Dev and QA, Frontend and Backend. You can label this field to match your scope.</inlineHelpText>
        <label>Planned Points Other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Platform__c</fullName>
        <description>This field auto-populates and displays the pipeline platform</description>
        <formula>BLANKVALUE( 
    TEXT(copado__Project__r.copado__Deployment_Flow__r.copado__Platform__c) ,  
    BLANKVALUE(  
        TEXT(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Platform__c), 
        &apos;&apos;
    ) 
)</formula>
        <inlineHelpText>This field auto-populates and displays the pipeline platform</inlineHelpText>
        <label>Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Priority__c</fullName>
        <description>Numeric value to determine which User Stories are more urgent and should be completed first.</description>
        <inlineHelpText>Numeric value to determine which User Stories are more urgent and should be completed first.</inlineHelpText>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Progress_Status__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;&quot;, 1, 0) &amp;
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Completed&quot;, 15, (copado__Progress__c*100) * 2) &amp;
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;white&quot;, 15,
200 - ((copado__Progress__c*100)* 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Progress__c</fullName>
        <label>Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project where the User Story belongs.</description>
        <inlineHelpText>Project where the User Story belongs.</inlineHelpText>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Promote_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the User Story is marked as ready to be promoted. The user story will appear as &apos;Ahead&apos; and available to be selected in the Branch Management and Promotion pages.</description>
        <inlineHelpText>If checked, the User Story is marked as ready to be promoted. The user story will appear as &apos;Ahead&apos; and available to be selected in the Promotion and Branch Management pages.</inlineHelpText>
        <label>Ready to Promote</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>